# arbitrageR

./: .gitignore  app.pid  appsettings.json  config.toml
docs/: TYPES.md  code-review.md
docs/sprints/: README.md  sprint-01-foundation.md  sprint-02-websocket.md  sprint-03-exchanges.md  sprint-04-arbitrage.md  sprint-04-rest-orders.md  sprint-05-arbitrage.md  sprint-05-audit-report.md  sprint-05-optimization.md  sprint-06-infrastructure.md
reference/backend/: BotController.cs  ProfilerController.cs  ThresholdTrackerService.cs
reference/frontend/css/: cyberpunk.css
reference/frontend/js/: app-vue.js  store.js
reference/frontend/js/components/: BotCard.js  DebugConsole.js  Ladder.js  LadderGrid.js  StatsTable.js  SystemDashboard.js
rust-hft/: Cargo.toml  rust-toolchain.toml
rust-hft/benches/: calculator.rs  fixed_point.rs  parsing.rs  tracker.rs  websocket.rs
rust-hft/examples/: ws_test.rs
rust-hft/logs/api/: api.2026-02-12
rust-hft/logs/error/: error.2026-02-12
rust-hft/logs/main/: main.2026-02-12
rust-hft/logs/ws/: ws.2026-02-12
rust-hft/src/: engine.rs  lib.rs  main.rs  test_utils.rs
rust-hft/src/core/: discovery.rs  fixed_point.rs  market_data.rs  mod.rs  registry.rs  symbol.rs  symbol_map.rs
rust-hft/src/exchanges/: mod.rs  traits.rs
rust-hft/src/exchanges/binance/: mod.rs
rust-hft/src/exchanges/bybit/: mod.rs
rust-hft/src/exchanges/parsing/: binance.rs  bybit.rs  mod.rs
rust-hft/src/hot_path/: calculator.rs  mod.rs  routing.rs  spread.rs  tracker.rs
rust-hft/src/infrastructure/: api.rs  config.rs  health.rs  logging.rs  metrics.rs  mod.rs  pool.rs  ring_buffer.rs  time_window_buffer.rs
rust-hft/src/rest/: client.rs  mod.rs  signing.rs
rust-hft/src/ws/: connection.rs  mod.rs  ping.rs  pool.rs  subscription.rs
scripts/: analyze_complexity.py  analyze_project.py  arch_scanner.py  calculate_allocation_score.py  get_structure.py
scripts/PriceStepExtractor/: PriceStepExtractor.cs  PriceStepExtractor.csproj  generate_config.ps1  tick_size_blacklist.txt  validation_report.md
sprints/: FINAL-SMELL-REVIEW.md  sprint-6-smell-review.md  sprint-6.md  sprint-7-validation.md
src/abstractions/: IExchangeClient.cs  IWebSocketServer.cs
src/exchanges/: BinanceFuturesExchangeClient.cs  BinanceFuturesNativeWebSocketClient.cs  BinanceListenKeyManager.cs  BinanceOrderWebSocket.cs  BinanceRestClient.cs  BinanceUserDataStreamService.cs  BybitFuturesExchangeClient.cs  BybitFuturesNativeWebSocketClient.cs  BybitOrderWebSocket.cs  BybitRestClient.cs
wwwroot/: dashboard.html
